Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
11.8
-
None
-
Related to install and upgrade
Description
/home/ycp/source/mariadb-server/11.8/src/extra/mariadb_migrate_config_file.c:138:21: error: ‘key_file_cnf’ defined but not used [-Werror=unused-variable]
|
138 | static PSI_file_key key_file_cnf;
|
| ^~~~~~~~~~~~
|
cc1: all warnings being treated as errors
|
make[2]: *** [extra/CMakeFiles/mariadb-migrate-config-file.dir/build.make:132: extra/CMakeFiles/mariadb-migrate-config-file.dir/mariadb_migrate_config_file.c.o] Error 1
|
make[1]: *** [CMakeFiles/Makefile2:10387: extra/CMakeFiles/mariadb-migrate-config-file.dir/all] Error 2
|
make[1]: *** Waiting for unfinished jobs....
|
Attachments
Issue Links
- is caused by
-
MDEV-32745 config upgrade helper tool
-
- Closed
-