MDEV-39789 Fix compiling without perfschema