extra/mariadb_migrate_config_file.c
@@ -135,7 +135,9 @@ static size_t global_copied_lines=0, global_unsupported_lines= 0;
 static size_t global_mariadbd_additions= 0;
 
 static PSI_memory_key key_memory_upgrade_config;
+#ifdef HAVE_PSI_FILE_INTERFACE
 static PSI_file_key key_file_cnf;
+#endif
 static size_t global_update_count= 0;
 static my_bool give_error_for_missing_files= 0;
 static my_bool opt_mariadbd_testing;
